--- a/now.json
+++ b/now.json
@@ -4,7 +4,7 @@
   "builds": [
     {
       "src": "package.json",
-      "use": "@now/node",
+      "use": "@now/static-build",
       "config": { "distDir": "dist" }
     }
   ],
