--- a/now.json
+++ b/now.json
@@ -4,7 +4,11 @@
   "builds": [
     {
       "src": "package.json",
-      "use": "@now/static"
+      "use": "@now/static-build"
+    },
+    {
+      "src": "main.js",
+      "use": "@now/node"
     }
   ],
   "routes": [
