--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "author": "",
   "license": "MIT",
+  "engines": {
+    "node": "10.16.2"
+  },
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
     "now-build": "npm run build",
