--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "",
   "license": "MIT",
   "engines": {
-    "node": "10.16.2"
+    "node": "10.x"
   },
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
