--- a/now.json
+++ b/now.json
@@ -3,7 +3,7 @@
   "name": "plantel-educativo-api",
   "builds": [
     {
-      "src": "src/main.ts",
+      "src": "package.json",
       "use": "@now/static-build"
     }
   ],
